--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="container">
+    <div class="todo-app">
+      <h2>To-do List <img src="images/icon.png" alt="Book and Pen"></h2>
+      <div class="row">
+        <input type="text" id="input-box" placeholder="Add your Task">
+        <button>Add</button>
+        
+      </div>
+      <ul id="list-container">
+        <!-- <li class="checked">Task 1</li>
+        <li>Task 2</li>
+        <li>Task 3</li> -->
+      </ul>
+    </div>
+  </div>
   
   <script src="style.css"></script>
 </body>
